--- a/templates/base.html
+++ b/templates/base.html
@@ -12,11 +12,12 @@
 	<title>AppStack - Admin &amp; Dashboard Template</title>
 
 	<link rel="preconnect" href="//fonts.gstatic.com/" crossorigin="">
+<!--	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">-->
 
 	<!-- PICK ONE OF THE STYLES BELOW -->
 	 <link href="{% static 'css/classic.css' %}" rel="stylesheet">
-	 <link href="{% static 'css/corporate.css' %}" rel="stylesheet">
-	 <link href="{% static 'css/modern.css' %}" rel="stylesheet">
+<!--	 <link href="{% static 'css/corporate.css' %}" rel="stylesheet">-->
+<!--	 <link href="{% static 'css/modern.css' %}" rel="stylesheet">-->
 
 	<!-- BEGIN SETTINGS -->
 	<!-- You can remove this after picking a style -->
@@ -24,8 +25,12 @@
 		body {
 			opacity: 0;
 		}
+		a {
+			color: #FFFFFF;
+			text-decoration: none;
+		}
 	</style>
-	<script src="{% static 'js\settings.js' %}"></script>
+	<script src="js\settings.js"></script>
 	<!-- END SETTINGS -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-120946860-6"></script>
@@ -39,22 +44,58 @@
 
 <body>
 	<div class="wrapper">
+		{% if request.path != '/sign-in/' %}
 		<nav id="sidebar" class="sidebar">
 			<div class="sidebar-content ">
-				<a class="sidebar-brand" href="index.html">
+				<a class="sidebar-brand" href="{% url 'dashboard-url' %}">
 				  <i class="align-middle" data-feather="box"></i>
-				  <span class="align-middle">AppStack</span>
+				  <span class="align-middle">Digital Girls</span>
 				</a>
 
 				<ul class="sidebar-nav">
-					<li class="sidebar-item active">
+					<li class="sidebar-item{% if request.path == '/' %} active {% endif %}">
 						<a href="{% url 'dashboard-url' %}" class="sidebar-link">
-						  <i class="align-middle" data-feather="sliders"></i> <span class="align-middle">Dashboard</span>
+						  <i class="align-middle" data-feather="layout"></i> <span class="align-middle">Dashboard</span>
 						</a>
 					</li>
-					<li class="sidebar-item">
+					<li class="sidebar-item{% if request.path == '/application/' %} active {% endif %}">
+						<a href="{% url 'application-url' %}" class="sidebar-link">
+						  <i class="align-middle" data-feather="users"></i> <span class="align-middle">Applications</span>
+						</a>
+					</li>
+					<li class="sidebar-item{% if request.path == '/slider/' %} active {% endif %}">
 						<a href="{% url 'slider-url' %}" class="sidebar-link">
 						  <i class="align-middle" data-feather="sliders"></i> <span class="align-middle">Slider</span>
+						</a>
+					</li>
+					<li class="sidebar-item{% if request.path == '/about/' %} active {%  elif request.path == '/about/item/' %} active {% endif %}">
+						<a href="{% url 'about-url' %}" class="sidebar-link">
+						  <i class="align-middle" data-feather="info"></i> <span class="align-middle">About</span>
+						</a>
+					</li>
+					<li class="sidebar-item{% if request.path == '/course/' %} active {%  elif request.path == '/course/item/' %} active {% endif %}">
+						<a href="{% url 'course-url' %}" class="sidebar-link">
+						  <i class="align-middle" data-feather="book"></i> <span class="align-middle">Course</span>
+						</a>
+					</li>
+					<li class="sidebar-item{% if request.path == '/task/' %} active {% endif %}">
+						<a href="{% url 'task-url' %}" class="sidebar-link">
+						  <i class="align-middle" data-feather="align-left"></i> <span class="align-middle">Task</span>
+						</a>
+					</li>
+					<li class="sidebar-item{% if request.path == '/result/' %} active {% endif %}">
+						<a href="{% url 'result-url' %}" class="sidebar-link">
+						  <i class="align-middle" data-feather="list"></i> <span class="align-middle">Result</span>
+						</a>
+					</li>
+					<li class="sidebar-item{% if request.path == '/contact/' %} active {% endif %}">
+						<a href="{% url 'contact-url' %}" class="sidebar-link">
+						  <i class="align-middle" data-feather="phone"></i> <span class="align-middle">Contact</span>
+						</a>
+					</li>
+					<li class="sidebar-item{% if request.path == '/info/' %} active {% endif %}">
+						<a href="{% url 'info-url' %}" class="sidebar-link">
+						  <i class="align-middle" data-feather="info"></i> <span class="align-middle">Info</span>
 						</a>
 					</li>
 				</ul>
@@ -69,69 +110,56 @@
 				  <i class="hamburger align-self-center"></i>
 				</a>
 
-				<form class="form-inline d-none d-sm-inline-block">
-					<input class="form-control form-control-no-border mr-sm-2" type="text" placeholder="Search projects..." aria-label="Search">
+				<form action="{% url 'search-url' %}" class="form-inline d-none d-sm-inline-block" method="post">
+					{% csrf_token %}
+					<input class="form-control form-control-no-border mr-sm-2" name="search" type="text" placeholder="Search projects..." aria-label="Search">
 				</form>
 
 				<div class="navbar-collapse collapse">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item dropdown">
 							<a class="nav-icon dropdown-toggle d-inline-block d-sm-none" href="#" data-toggle="dropdown">
-                <i class="align-middle" data-feather="settings"></i>
-              </a>
+								<i class="align-middle" data-feather="settings"></i>
+							</a>
 
 							<a class="nav-link dropdown-toggle d-none d-sm-inline-block" href="#" data-toggle="dropdown">
-                <img src="{% static 'img\avatars\avatar.jpg' %}" class="avatar img-fluid rounded-circle mr-1" alt="Chris Wood"> <span class="text-dark">Chris Wood</span>
-              </a>
+								<span class="text-dark">Profile</span>
+							</a>
 							<div class="dropdown-menu dropdown-menu-right">
-								<a class="dropdown-item" href="pages-profile.html"><i class="align-middle mr-1" data-feather="user"></i> Profile</a>
-								<a class="dropdown-item" href="#"><i class="align-middle mr-1" data-feather="pie-chart"></i> Analytics</a>
+								<a class="dropdown-item" href="{% url 'password-url' %}"><i class="align-middle mr-1" data-feather="user"></i> Settings</a>
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="pages-settings.html">Settings & Privacy</a>
-								<a class="dropdown-item" href="#">Help</a>
-								<a class="dropdown-item" href="#">Sign out</a>
+								<a class="dropdown-item" href="{% url 'logout-url' %}">Sign out</a>
 							</div>
 						</li>
 					</ul>
 				</div>
 			</nav>
-
+			{% endif %}
             {% block content %}
 
             {% endblock content %}
+			{% if request.path != '/sign-in/' %}
 
             <footer class="footer">
 				<div class="container-fluid">
 					<div class="row text-muted">
-						<div class="col-6 text-left">
-							<ul class="list-inline">
-								<li class="list-inline-item">
-									<a class="text-muted" href="#">Support</a>
-								</li>
-								<li class="list-inline-item">
-									<a class="text-muted" href="#">Help Center</a>
-								</li>
-								<li class="list-inline-item">
-									<a class="text-muted" href="#">Privacy</a>
-								</li>
-								<li class="list-inline-item">
-									<a class="text-muted" href="#">Terms of Service</a>
-								</li>
-							</ul>
-						</div>
+						<div class="col-6 text-left"></div>
 						<div class="col-6 text-right">
 							<p class="mb-0">
-								&copy; 2019 - <a href="index.html" class="text-muted">AppStack</a>
+								&copy; 2023 - <a href="{% url 'dashboard-url' %}" class="text-muted">Digital City</a>
 							</p>
 						</div>
 					</div>
 				</div>
 			</footer>
+			{% endif %}
 		</div>
+
+
 	</div>
 
 	<script src="{% static 'js\app.js' %}"></script>
-
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	{% block script %}
 
 	{% endblock script %}
